oxiplate-derive/tests/broken/writ/writ-unclosed-tag.stderr
error: Expecting the writ tag to be closed with `_}}`, `-}}`, or `}}`.
 --> tests/broken/writ/writ-unclosed-tag.rs:4:25
  |
4 | #[oxiplate_inline("{{ foo")]
  |                         ^
